--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "Dsantos\\Spotcli\\": "src/"
+            "Spotpromo\\Spotcli\\": "./spotpromocli"
         }
     },
     "authors": [
